# create-paper-py

./: .gitignore  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.github/workflows/: publish.yml
src/: env-check.tsx  index.tsx  prompts.tsx  render.tsx  runners.tsx  scaffold.tsx  smoke.tsx  types.tsx  utils.tsx
template/: AGENTS.md  CLAUDE.md  README.md  _gitignore  pyproject.toml
template/datas/raw_data/: datasets.json
template/scripts/s0_utilities/: dataset_loader.py
